force-app/main/default/objects/LabelSetting__mdt/LabelSetting__mdt.object-meta.xml
<CustomObject>
    <description>大分類・小分類により表示するラベル名、明細名称</description>
    <label>ラベル名設定</label>
</CustomObject>