force-app/main/default/objects/LabelSetting__mdt/fields/DetailName__c.field-meta.xml
<CustomField>
    <fullName>DetailName__c</fullName>
    <label>明細名称</label>
    <length>100</length>
    <type>Text</type>
</CustomField>