force-app/main/default/objects/LabelSetting__mdt/fields/LabelName10__c.field-meta.xml
<CustomField>
    <fullName>LabelName10__c</fullName>
    <label>ラベル名10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>