force-app/main/default/objects/LabelSetting__mdt/fields/LabelName1__c.field-meta.xml
<CustomField>
    <fullName>LabelName1__c</fullName>
    <label>ラベル名1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>