force-app/main/default/objects/LabelSetting__mdt/fields/LabelName2__c.field-meta.xml
<CustomField>
    <fullName>LabelName2__c</fullName>
    <label>ラベル名2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>