force-app/main/default/objects/LabelSetting__mdt/fields/MajorClassification__c.field-meta.xml
<CustomField>
    <fullName>MajorClassification__c</fullName>
    <label>大分類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>