force-app/main/default/objects/LabelSetting__mdt/fields/MinorClassification__c.field-meta.xml
<CustomField>
    <fullName>MinorClassification__c</fullName>
    <label>小分類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>