force-app/main/default/objects/LabelSetting__mdt/fields/UseBU__c.field-meta.xml
<CustomField>
    <fullName>UseBU__c</fullName>
    <label>使用BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>施設</fullName>
            </value>
            <value>
                <fullName>水環境</fullName>
            </value>
            <value>
                <fullName>官需</fullName>
            </value>
            <value>
                <fullName>共通</fullName>
                <default>true</default>
                <label>共通</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>