force-app/main/default/objects/LabelSetting__mdt/listViews/ViewAll.listView-meta.xml
<ListView>
    <fullName>ViewAll</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>MajorClassification__c</columns>
    <columns>MinorClassification__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
    <language>ja</language>
</ListView>